--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@fortawesome/fontawesome-free": "^6.6.0",
     "bootstrap": "^5.3.3",
     "express": "^4.18.2",
+    "ngx-image-viewer": "^1.0.13",
+    "ngx-image-zoom": "^3.0.0",
     "ngx-owl-carousel-o": "^18.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
