--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ngx-image-viewer": "^1.0.13",
     "ngx-image-zoom": "^3.0.0",
     "ngx-owl-carousel-o": "^18.0.0",
+    "ngx-spinner": "^17.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
