--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "@angular/platform-server": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.0",
+    "@auth0/angular-jwt": "^5.2.0",
     "@fortawesome/fontawesome-free": "^6.6.0",
     "bootstrap": "^5.3.3",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
+    "jwt-decode": "^4.0.0",
     "ngx-image-viewer": "^1.0.13",
     "ngx-image-zoom": "^3.0.0",
     "ngx-owl-carousel-o": "^18.0.0",
