--- a/angular.json
+++ b/angular.json
@@ -39,6 +39,7 @@
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "./node_modules/@fortawesome/fontawesome-free/css/all.min.css",
               "src/styles.scss",
+              "node_modules/ngx-toastr/toastr.css",
               "node_modules/ngx-spinner/animations/ball-scale-ripple.css"
             ],
             "scripts": [
