--- a/package.json
+++ b/package.json
@@ -7,11 +7,10 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
- 
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^18.2.0",
+    "@angular/animations": "^18.2.6",
     "@angular/common": "^18.2.0",
     "@angular/compiler": "^18.2.0",
     "@angular/core": "^18.2.0",
@@ -31,6 +30,7 @@
     "ngx-image-zoom": "^3.0.0",
     "ngx-owl-carousel-o": "^18.0.0",
     "ngx-spinner": "^17.0.0",
+    "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
